# cli_progress_bar

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
examples/: logger.rs
src/: color.rs  global.rs  lib.rs  logger.rs  pb.rs  progress_bar.rs  singleton.rs  style.rs
tests/: logger.rs  test-global.rs  test.rs
