[package]
name = "progress_bar"
version = "1.0.0"
authors = ["Mubelotix <mubelotix@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A crate that allows you to display a progress bar (same style than the cargo progress bar)."
readme = "README.md"
repository = "https://github.com/Mubelotix/cli_progress_bar"
categories = ["command-line-interface"]

[dependencies]
lazy_static = "1.4"
