[package]
name = "progress_bar"
version = "1.2.0"
authors = ["Mubelotix <mubelotix@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A simple and elegant crate for displaying progress bars in the terminal. It can estimate and display the remaining time, and includes logging utilities that integrate cleanly with your progress bar output."
readme = "README.md"
repository = "https://github.com/Mubelotix/cli_progress_bar"
categories = ["command-line-interface"]

[dependencies]
log = { version = "0.4", optional = true }

[dev-dependencies]
env_logger = "0.11"

[features]
default = []
logger = ["log"]
